:bug: Fixed number alignment on windows

--- a/src/app.css
+++ b/src/app.css
@@ -30,6 +30,7 @@
 		background-repeat: no-repeat;
 		background-size: cover;
 		overflow-x: hidden;
+		font-variant-numeric: lining-nums;
 	}
 
 	p,
